--- a/gs.css
+++ b/gs.css
@@ -3,6 +3,11 @@ color: black;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-size: medium;
 }
+.course{
+    color:blue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+}
 .song{
 color: black;
 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -16,10 +21,58 @@ font-size: medium;
 }
 .direction:hover{
     color:brown;
-    background-color: azure;
+    background-color: beige;
 }
 .name{
     color: black;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: medium;
+    
 }
+.GIRLS{
+    color:aqua;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+
+}
+.KATE{
+    color: seagreen;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: medium;
+    }
+    .ALL{
+        color:chocolate;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: medium;
+
+    }
+
+    .SAMUEL{
+        color: blueviolet;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: medium;
+    }
+
+    .KING{
+        color: darkorange;
+    font-family: Arial, Helvetica, sans-serif;
+     font-size: medium;
+}
+    .EDITH{
+   color: crimson;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: medium;
+
+    }
+    .ISABEL{
+        color: grey;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: medium;
+    }
+    .RUTH{
+     color: hotpink;
+     font-family: Arial, Helvetica, sans-serif;
+     font-size: medium;
+
+    }
+
