--- a/gs.css
+++ b/gs.css
@@ -2,16 +2,19 @@
 color: black;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-size: medium;
+text-indent: 100px;
 }
-.course{
+.chorus{
     color:blue;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
+    text-indent: 150px;
 }
 .song{
 color: black;
 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 font-size: medium;
+text-indent: 150px;
 }
 .direction{
     color: black;
