--- a/gs.css
+++ b/gs.css
@@ -1,81 +1,113 @@
-.speech{
-color: black;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-font-size: medium;
-text-indent: 100px;
+.speech {
+    color: black;
+   font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: medium;
+    text-indent: 100px;
 }
-.chorus{
-    color:blue;
+
+.chorus {
+    color: blue;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
     text-indent: 150px;
 }
-.song{
-color: black;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-font-size: medium;
-text-indent: 150px;
+
+.song {
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: medium;
+    text-indent: 150px;
 }
-.direction{
+
+.direction {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
     background-color: azure;
 }
-.direction:hover{
-    color:brown;
+
+.direction:hover {
+    color: brown;
     background-color: beige;
 }
-.name{
+
+.name {
     color: black;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: medium;
-    
+
 }
-.GIRLS{
-    color:aqua;
+
+.GIRLS {
+    color: aqua;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
 
 }
-.KATE{
+
+.KATE {
     color: seagreen;
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: medium;
-    }
-    .ALL{
-        color:chocolate;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: medium;
-
-    }
-
-    .SAMUEL{
-        color: blueviolet;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: medium;
-    }
-
-    .KING{
-        color: darkorange;
     font-family: Arial, Helvetica, sans-serif;
-     font-size: medium;
+    font-size: medium;
 }
-    .EDITH{
-   color: crimson;
-   font-family: Arial, Helvetica, sans-serif;
-   font-size: medium;
 
-    }
-    .ISABEL{
-        color: grey;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: medium;
-    }
-    .RUTH{
-     color: hotpink;
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: medium;
+.ALL {
+    color: chocolate;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
 
-    }
+}
 
+.SAMUEL {
+    color: blueviolet;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+}
+
+.KING {
+    color: darkorange;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+}
+
+.EDITH {
+    color: crimson;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+
+}
+
+.ISABEL {
+    color: grey;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+}
+
+.RUTH {
+    color: hotpink;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+
+}
+
+table th, td{
+    border: 3px solid;
+
+
+}
+tr:nth-child(odd) {
+    background-color:hotpink;
+}
+td{
+ text-align: center;
+
+}
+th,
+td{
+    padding: 20px;
+    text-align: center;
+}
+th{
+    background-color:cadetblue;
+    color: black;
+}
