--- a/gs.css
+++ b/gs.css
@@ -1,6 +1,6 @@
 .speech {
     color: black;
-   font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: medium;
     text-indent: 100px;
 }
@@ -77,6 +77,12 @@
 
 }
 
+.FREDERIC {
+    color:darkturquoise;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+}
+
 .ISABEL {
     color: grey;
     font-family: Arial, Helvetica, sans-serif;
@@ -90,24 +96,29 @@
 
 }
 
-table th, td{
+table th,
+td {
     border: 3px solid;
 
 
 }
+
 tr:nth-child(odd) {
-    background-color:hotpink;
+    background-color: hotpink;
 }
-td{
- text-align: center;
+
+td {
+    text-align: center;
 
 }
+
 th,
-td{
+td {
     padding: 20px;
     text-align: center;
 }
-th{
-    background-color:cadetblue;
+
+th {
+    background-color: cadetblue;
     color: black;
 }
