--- a/gs.css
+++ b/gs.css
@@ -35,13 +35,13 @@
     color: black;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: medium;
-
 }
 
 .GIRLS {
     color: aqua;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
+
 
 }
 
@@ -68,6 +68,10 @@
     color: darkorange;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
+    
+}
+h6:hover{
+    text-shadow: 5px 5px 5px green;
 }
 
 .EDITH {
